--- a/citymap.html
+++ b/citymap.html
@@ -55,7 +55,7 @@
         </div>
         <div class="pure-g citymap map2 hidden">
            
-            <a href="img/metrokaart.pdf" target="_blank">
+            <a href="img/metrokaart.png" target="_blank">
                 <img src="img/metrokaart.png">
             </a>
             <p>Klik op de afbeelding om het te vergroten.</p>
